--- a/src/app/inaki-navbar/inaki-navbar.component.css
+++ b/src/app/inaki-navbar/inaki-navbar.component.css
@@ -1,7 +1,44 @@
-.inaki-bg {
-    background-color: rgba(255, 255, 255, .2)
+.inaki-navbar {
+    flex-direction: row !important;
+    background-color: transparent !important;
+    color: #FFF;
+    transition: all .7s linear .2s;
 }
 
-.inaki-logo-nav {
+.inaki-svg-navbar-logo {
     height: 30px;
+    width: auto;
+    transition: all .7s linear .2s;
+}
+
+.inaki-svg-navbar-logo .letter {
+    fill: #FFF !important;
+    transition: all .7s linear .2s;
+}
+
+
+/* HOVER */
+
+.inaki-navbar:hover {
+    background-color: rgba(255, 255, 255, 0.7) !important;
+    border-bottom: 1px solid #FFF;
+    color: #000;
+    transition: all .7s linear .2s;
+}
+
+.inaki-navbar:hover .inaki-svg-navbar-logo .letter {
+    fill: #47016e !important;
+    transition: all .7s linear .2s;
+}
+
+.inaki-navbar:hover .inaki-svg-navbar-logo {
+    height: 40px;
+    width: auto;
+    transition: all .7s linear .2s;
+}
+
+.inaki-svg-navbar-logo .letter:hover {
+    fill: #200031 !important;
+    transition: all .7s linear .2s;
+    /* transition: all 1s; */
 }
